Bug 1273024 - Stop inflating the visible rect for fixed-position items unnecessarily. r=mattwoodrow

MozReview-Commit-ID: E11n1WhvVBO